kubernetes/node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-backend
spec:
  type: ClusterIP
  selector:
    name: app-pod
    app: myapp
  ports:
  - port: 80
    targetPort: 8080
