kubernetes/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgre-db
spec:
  type: ClusterIP
  selector:
    name: app-db
    app: myapp
  ports:
  - port: 5432
    targetPort: 5432
